fontawesome icons added

--- a/CCMS/Views/Home/QueryByPerson.cshtml
+++ b/CCMS/Views/Home/QueryByPerson.cshtml
@@ -293,40 +293,62 @@
                             <div class="card-header p-0 pt-1 border-bottom-0">
                                 <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link active" id="custom-tabs-three-Summary-tab" data-toggle="pill" href="#custom-tabs-three-Summary" role="tab" aria-controls="custom-tabs-three-Summary" aria-selected="true">Summary</a>
+                                        <a class="nav-link active" id="custom-tabs-three-Summary-tab" data-toggle="pill" href="#custom-tabs-three-Summary" role="tab" aria-controls="custom-tabs-three-Summary" aria-selected="true">
+
+                                            <i class="fa fa-book"></i>&nbsp;Summary
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-Address-tab" data-toggle="pill" href="#custom-tabs-three-Address" role="tab" aria-controls="custom-tabs-three-Address" aria-selected="false">Address</a>
+                                        <a class="nav-link" id="custom-tabs-three-Address-tab" data-toggle="pill" href="#custom-tabs-three-Address" role="tab" aria-controls="custom-tabs-three-Address" aria-selected="false">
+                                            <i class="fa fa-globe-africa"></i>&nbsp;Address
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-Contacts-tab" data-toggle="pill" href="#custom-tabs-three-Contacts" role="tab" aria-controls="custom-tabs-three-Contacts" aria-selected="false">Contacts</a>
+                                        <a class="nav-link" id="custom-tabs-three-Contacts-tab" data-toggle="pill" href="#custom-tabs-three-Contacts" role="tab" aria-controls="custom-tabs-three-Contacts" aria-selected="false">
+                                            <i class="fa fa-address-book"></i>&nbsp;Contacts</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-AllContacts-tab" data-toggle="pill" href="#custom-tabs-three-AllContacts" role="tab" aria-controls="custom-tabs-three-AllContacts" aria-selected="false">All Contacts</a>
+                                        <a class="nav-link" id="custom-tabs-three-AllContacts-tab" data-toggle="pill" href="#custom-tabs-three-AllContacts" role="tab" aria-controls="custom-tabs-three-AllContacts" aria-selected="false">
+                                            <i class="fa fa-address-card"></i>&nbsp;All Contacts
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-Documents-tab" data-toggle="pill" href="#custom-tabs-three-Documents" role="tab" aria-controls="custom-tabs-three-Documents" aria-selected="false">Documents</a>
+                                        <a class="nav-link" id="custom-tabs-three-Documents-tab" data-toggle="pill" href="#custom-tabs-three-Documents" role="tab" aria-controls="custom-tabs-three-Documents" aria-selected="false">
+                                            <i class="fa fa-file-contract"></i>&nbsp;Documents
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-CallCentre-tab" data-toggle="pill" href="#custom-tabs-three-CallCentre" role="tab" aria-controls="custom-tabs-three-CallCentre" aria-selected="false">Call Center</a>
+                                        <a class="nav-link" id="custom-tabs-three-CallCentre-tab" data-toggle="pill" href="#custom-tabs-three-CallCentre" role="tab" aria-controls="custom-tabs-three-CallCentre" aria-selected="false">
+                                            <i class="fa fa-headset"></i>&nbsp;Call Center
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-Bookings-tab" data-toggle="pill" href="#custom-tabs-three-Bookings" role="tab" aria-controls="custom-tabs-three-Bookings" aria-selected="false">Bookings</a>
+                                        <a class="nav-link" id="custom-tabs-three-Bookings-tab" data-toggle="pill" href="#custom-tabs-three-Bookings" role="tab" aria-controls="custom-tabs-three-Bookings" aria-selected="false">
+                                            <i class="fa fa-calendar-check"></i>&nbsp;Bookings
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-X-Ray-tab" data-toggle="pill" href="#custom-tabs-three-X-Ray" role="tab" aria-controls="custom-tabs-three-X-Ray" aria-selected="false">X-Ray</a>
+                                        <a class="nav-link" id="custom-tabs-three-X-Ray-tab" data-toggle="pill" href="#custom-tabs-three-X-Ray" role="tab" aria-controls="custom-tabs-three-X-Ray" aria-selected="false">
+                                            <i class="fa fa-x-ray"></i>&nbsp;X-Ray
+                                        </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-ServiceHist-tab" data-toggle="pill" href="#custom-tabs-three-ServiceHist" role="tab" aria-controls="custom-tabs-three-ServiceHist" aria-selected="false">Service Hist</a>
+                                        <a class="nav-link" id="custom-tabs-three-ServiceHist-tab" data-toggle="pill" href="#custom-tabs-three-ServiceHist" role="tab" aria-controls="custom-tabs-three-ServiceHist" aria-selected="false">
+                                        <i class="fa fa-user-clock"></i>&nbsp;
+                                        Service Hist</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-ServiceSummary-tab" data-toggle="pill" href="#custom-tabs-three-ServiceSummary" role="tab" aria-controls="custom-tabs-three-ServiceSummary" aria-selected="false">Service Summary</a>
+                                        <a class="nav-link" id="custom-tabs-three-ServiceSummary-tab" data-toggle="pill" href="#custom-tabs-three-ServiceSummary" role="tab" aria-controls="custom-tabs-three-ServiceSummary" aria-selected="false">
+                                        <i class="fa fa-user-cog"></i>&nbsp;
+                                        Service Summary</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-Claims-tab" data-toggle="pill" href="#custom-tabs-three-Claims" role="tab" aria-controls="custom-tabs-three-Claims" aria-selected="false">Claims</a>
+                                        <a class="nav-link" id="custom-tabs-three-Claims-tab" data-toggle="pill" href="#custom-tabs-three-Claims" role="tab" aria-controls="custom-tabs-three-Claims" aria-selected="false">
+                                        <i class="fa fa-user-check"></i>&nbsp;Claims</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="custom-tabs-three-PersonFlags-tab" data-toggle="pill" href="#custom-tabs-three-PersonFlags" role="tab" aria-controls="custom-tabs-three-PersonFlags" aria-selected="false">Person Flags</a>
+                                        <a class="nav-link" id="custom-tabs-three-PersonFlags-tab" data-toggle="pill" href="#custom-tabs-three-PersonFlags" role="tab" aria-controls="custom-tabs-three-PersonFlags" aria-selected="false">
+                                        <i class="fa fa-flag-checkered"></i>&nbsp;Person Flags</a>
                                     </li>
                                 </ul>
                             </div>
@@ -337,7 +359,7 @@
                                             <div class="col-lg-4 col-6">
                                                 <div class="card card-gray border">
                                                     <div class="card-header">
-                                                        <h4 class="card-title">Personal Details</h4>
+                                                        <h4 class="card-title"><i class="fa fa-user"></i>&nbsp;Personal Details</h4>
                                                     </div>
                                                     <div class="card-body">
                                                         <div class="row">
@@ -394,7 +416,7 @@
                                             <div class="col-lg-4 col-6">
                                                 <div class="card card-gray border">
                                                     <div class="card-header">
-                                                        <h4 class="card-title">Work Summary</h4>
+                                                        <h4 class="card-title"><i class="fa fa-user-shield"></i>&nbsp;Work Summary</h4>
                                                     </div>
                                                     <div class="card-body" style="height:247px!important">
                                                         <div class="row">
@@ -441,7 +463,7 @@
                                             <div class="col-lg-4 col-6">
                                                 <div class="card card-gray border" style="width:100%!important">
                                                     <div class="card-header">
-                                                        <h4 class="card-title">Scheduled Exclusions</h4>
+                                                        <h4 class="card-title"><i class="fa fa-calendar-day"></i>&nbsp;Scheduled Exclusions</h4>
                                                     </div>
                                                     <div class="card-body" style="height:100px!important">
                                                         <div class="row">
@@ -468,7 +490,7 @@
                                                 </div>
                                                 <div class="card card-gray border">
                                                     <div class="card-header" style="margin-top: -12px !important;">
-                                                        <h5 class="card-title">Eligibility</h5>
+                                                        <h5 class="card-title"><i class="fa fa-user-check"></i>&nbsp;Eligibility</h5>
                                                     </div>
                                                     <div class="card-body" style="height:114px!important">
                                                         <div class="row">
