--- a/CCMS/Views/Home/QueryByPerson.cshtml
+++ b/CCMS/Views/Home/QueryByPerson.cshtml
@@ -63,7 +63,7 @@
 <link rel="stylesheet" href="~/Content/dashboardNew/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/Content/dashboardNew/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 <link rel="stylesheet" href="~/Content/dashboardNew/dist/css/adminlte.min.css">
-<div ng-controller="QuerybyPersonCntrl" ng-cloak style="height:auto;zoom:0.9!important">
+<div ng-controller="QuerybyPersonCntrl" ng-cloak style="height:auto;zoom:0.8!important">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
@@ -295,60 +295,60 @@
                                     <li class="nav-item">
                                         <a class="nav-link active" id="custom-tabs-three-Summary-tab" data-toggle="pill" href="#custom-tabs-three-Summary" role="tab" aria-controls="custom-tabs-three-Summary" aria-selected="true">
 
-                                            <i class="fa fa-book"></i>&nbsp;Summary
+                                            <i class="fa fa-book" style="color:#057A52"></i>&nbsp;Summary
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-Address-tab" data-toggle="pill" href="#custom-tabs-three-Address" role="tab" aria-controls="custom-tabs-three-Address" aria-selected="false">
-                                            <i class="fa fa-globe-africa"></i>&nbsp;Address
+                                            <i class="fa fa-globe-africa"  style="color:#057A52"></i>&nbsp;Address
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-Contacts-tab" data-toggle="pill" href="#custom-tabs-three-Contacts" role="tab" aria-controls="custom-tabs-three-Contacts" aria-selected="false">
-                                            <i class="fa fa-address-book"></i>&nbsp;Contacts</a>
+                                            <i class="fa fa-address-book"  style="color:#057A52"></i>&nbsp;Contacts</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-AllContacts-tab" data-toggle="pill" href="#custom-tabs-three-AllContacts" role="tab" aria-controls="custom-tabs-three-AllContacts" aria-selected="false">
-                                            <i class="fa fa-address-card"></i>&nbsp;All Contacts
+                                            <i class="fa fa-address-card"  style="color:#057A52"></i>&nbsp;All Contacts
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-Documents-tab" data-toggle="pill" href="#custom-tabs-three-Documents" role="tab" aria-controls="custom-tabs-three-Documents" aria-selected="false">
-                                            <i class="fa fa-file-contract"></i>&nbsp;Documents
+                                            <i class="fa fa-file-contract"  style="color:#057A52"></i>&nbsp;Documents
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-CallCentre-tab" data-toggle="pill" href="#custom-tabs-three-CallCentre" role="tab" aria-controls="custom-tabs-three-CallCentre" aria-selected="false">
-                                            <i class="fa fa-headset"></i>&nbsp;Call Center
+                                            <i class="fa fa-headset" style="color:#057A52"></i>&nbsp;Call Center
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-Bookings-tab" data-toggle="pill" href="#custom-tabs-three-Bookings" role="tab" aria-controls="custom-tabs-three-Bookings" aria-selected="false">
-                                            <i class="fa fa-calendar-check"></i>&nbsp;Bookings
+                                            <i class="fa fa-calendar-check" style="color:#057A52"></i>&nbsp;Bookings
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-X-Ray-tab" data-toggle="pill" href="#custom-tabs-three-X-Ray" role="tab" aria-controls="custom-tabs-three-X-Ray" aria-selected="false">
-                                            <i class="fa fa-x-ray"></i>&nbsp;X-Ray
+                                            <i class="fa fa-x-ray" style="color:#057A52"></i>&nbsp;X-Ray
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-ServiceHist-tab" data-toggle="pill" href="#custom-tabs-three-ServiceHist" role="tab" aria-controls="custom-tabs-three-ServiceHist" aria-selected="false">
-                                        <i class="fa fa-user-clock"></i>&nbsp;
+                                        <i class="fa fa-user-clock" style="color:#057A52"></i>&nbsp;
                                         Service Hist</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-ServiceSummary-tab" data-toggle="pill" href="#custom-tabs-three-ServiceSummary" role="tab" aria-controls="custom-tabs-three-ServiceSummary" aria-selected="false">
-                                        <i class="fa fa-user-cog"></i>&nbsp;
+                                        <i class="fa fa-user-cog" style="color:#057A52"></i>&nbsp;
                                         Service Summary</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-Claims-tab" data-toggle="pill" href="#custom-tabs-three-Claims" role="tab" aria-controls="custom-tabs-three-Claims" aria-selected="false">
-                                        <i class="fa fa-user-check"></i>&nbsp;Claims</a>
+                                        <i class="fa fa-user-check" style="color:#057A52"></i>&nbsp;Claims</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="custom-tabs-three-PersonFlags-tab" data-toggle="pill" href="#custom-tabs-three-PersonFlags" role="tab" aria-controls="custom-tabs-three-PersonFlags" aria-selected="false">
-                                        <i class="fa fa-flag-checkered"></i>&nbsp;Person Flags</a>
+                                        <i class="fa fa-flag-checkered" style="color:#057A52"></i>&nbsp;Person Flags</a>
                                     </li>
                                 </ul>
                             </div>
@@ -601,7 +601,7 @@
                                     <div class="tab-pane fade" id="custom-tabs-three-Address" role="tabpanel" aria-labelledby="custom-tabs-three-Address-tab">
                                         <div class="card card-gray border" style="width:33%!important;float:left!important">
                                             <div class="card-header">
-                                                <h4 class="card-title">Residential</h4>
+                                                <h4 class="card-title"><i class="fa fa-location-arrow"></i>&nbsp;Residential</h4>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -648,7 +648,7 @@
                                         </div>
                                         <div class="card card-gray border" style="width:33%!important;float:left!important">
                                             <div class="card-header">
-                                                <h4 class="card-title">Residential</h4>
+                                                <h4 class="card-title"><i class="fa fa-location-arrow"></i>&nbsp;Residential</h4>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
@@ -695,7 +695,7 @@
                                         </div>
                                         <div class="card card-gray border" style="width:34%!important;float:left!important">
                                             <div class="card-header">
-                                                <h4 class="card-title">Work</h4>
+                                                <h4 class="card-title"><i class="fa fa-globe-africa"></i>&nbsp;Work</h4>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row">
