--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -467,7 +467,7 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fa fa fa-headset"></i>
                                 <p>
@@ -480,9 +480,9 @@
                                     <a href="../Home/ReceiveInnbondCall" class="nav-link">
                                         <i class="nav-icon fa fa-phone"></i>
                                         <p>
-                                            Receive Inbound Calls
+                                            Receive Inbound Calls-->
                                             @*<i class="right"></i>*@
-                                        </p>
+                                        <!--</p>
                                     </a>
                                 </li>
                                 <li class="nav-item" style="color:#000!important;border-bottom:1px dashed #a2c149!important">
@@ -549,6 +549,15 @@
                                     </a>
                                 </li>
                             </ul>
+                        </li>-->
+                        <li class="nav-item">
+                            <a href="../Home/CallCenter" class="nav-link">
+                                <i class="nav-icon fa fa-chart-line"></i>
+                                <p>
+                                    CallCenter
+                                    @*<i class="fas fa-angle-left right"></i>*@
+                                </p>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
@@ -585,7 +594,7 @@
         </aside>
 
         <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
+        <div class="content-wrapper" style="background:#ffffff">
             @RenderBody()
         </div>
         <!-- /.content-wrapper -->
