--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -348,7 +348,7 @@
                                     </a>
                                     <ul class="nav nav-treeview">
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/DeceasedRegister" class="nav-link">
                                                 <i class="nav-icon fa fa-user-injured"></i>
                                                 <p>Deceased Register</p>
                                             </a>
@@ -445,7 +445,7 @@
                                     </a>
                                     <ul class="nav nav-treeview">
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/ReceiveInnbondCall" class="nav-link">
                                                 <i class="nav-icon fa fa-user-injured"></i>
                                                 <p>Deceased Register</p>
                                             </a>
